@@ -1,4 +1,6 @@
 - 2.2.17: * corrected a typo in the pam_krb5(8) man page
+	  * clarified that the "tokens" flag should only be needed for
+	    applications which are not using PAM correctly
 	  * clarified COPYING and .spec file to better reflect licensing as
 	    indicated in the source files
 - 2.2.16: * don't bother using a helper for creating v4 ticket files when we're
