@@ -1,4 +1,6 @@
-2007-07-30:
+2007-08-02:
+	* src/pam_krb5.5.in,src/pam_krb5.8.in: note that "tokens" is
+	unnecessary if the calling application was written correctly.
 	* src/pam_krb5.8.in: reintroduce a missing line.
 	* COPYING: be more explicit about which BSD license we mean
 
